Added order controller, added error page handler for custom pages, added views, added tests, added qr code generator, added pdf ticket creating, added README

--- a/src/main/resources/templates/admin/routes/route_point_add.html
+++ b/src/main/resources/templates/admin/routes/route_point_add.html
@@ -27,7 +27,7 @@
                                     <div class="input-group mb-3">
                                 <select class="form-select" th:field="*{station.id}" id="dropDownList" required>
                                     <option th:each="stationObj : ${stationList}" th:value="${stationObj.id}"
-                                            th:text="${stationObj.name}"></option>
+                                            th:text="#{${stationObj.name}}"></option>
                                 </select>
                             </div>
                                     <div class="form-helper" th:text="#{admin.route.departure}"></div>
