--- a/src/main/resources/templates/admin/users/user_list.html
+++ b/src/main/resources/templates/admin/users/user_list.html
@@ -34,7 +34,7 @@
                         </div>
                     </td>
                     <td>
-                        <p class="fw-normal mb-1" th:text="${user.role}"></p>
+                        <p class="fw-normal mb-1" th:text="#{${user.role}}"></p>
                         <p class="text-muted mb-0">Local Railways</p>
                     </td>
                     <td>
