--- a/src/main/resources/templates/customer/user_about.html
+++ b/src/main/resources/templates/customer/user_about.html
@@ -21,6 +21,8 @@
                     <p class="card-text" th:text="#{about.email}+':  '  + ${currentUser.email}"></p>
                     <p class="card-text" th:text="#{about.phone}"></p>
                     <p class="card-text" th:text="#{about.me}"></p>
+                    <p class="card-text" th:text="#{about.balance}"></p>
+
 
                 </div>
 
