--- a/src/main/resources/templates/admin/routes/route_list.html
+++ b/src/main/resources/templates/admin/routes/route_list.html
@@ -28,8 +28,8 @@
                     <td><span th:text="${route.id}"> Route Id </span></td>
                     <td><span th:text="${route.trainId}"> Train Id </span></td>
                     <div th:if="${route.intermediateStations.size != 0}">
-                        <td><span th:text="${route.firstStation.departure}">Departure</span></td>
-                        <td><span th:text="${route.lastStation.arrival}">Arrival</span></td>
+                        <td><span th:text="${#temporals.format(route.firstStation.departure, 'yyyy-MM-dd HH:mm')}">Departure</span></td>
+                        <td><span th:text="${#temporals.format(route.lastStation.arrival, 'yyyy-MM-dd HH:mm')}">Arrival</span></td>
                         <td>
                             <form th:method="POST" th:action="@{/admin/routes/{routeId}/delete(routeId=${route.id})}">
 
@@ -64,10 +64,10 @@
                                     <tbody>
                                     <tr th:each="routePoint: ${route.intermediateStations}">
                                         <td><span
-                                                th:text="${routePoint.station.id} + ', ' + ${routePoint.station.name}">Station id, name</span>
+                                                th:text="${routePoint.id} + ', ' + #{${routePoint.station.name}}">Station id, name</span>
                                         </td>
-                                        <td><span th:text="${routePoint.arrival}">Arrival Date</span></td>
-                                        <td><span th:text="${routePoint.departure}">Departure Date</span></td>
+                                        <td><span th:text="${#temporals.format(routePoint.departure, 'yyyy-MM-dd HH:mm')}">Arrival Date</span></td>
+                                        <td><span th:text="${#temporals.format(routePoint.arrival, 'yyyy-MM-dd HH:mm')}">Departure Date</span></td>
                                         <td>
                                             <!-- GET FORM FOR UPDATE ROUTE_POINT-->
                                             <form th:method="GET"
