--- a/src/main/resources/templates/qrcode.html
+++ b/src/main/resources/templates/qrcode.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Ticket QR</title>
 </head>
 <body>
 <h1 style="text-align: center;" th:text="#{booking.qr.header}"></h1>
