--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,7 +27,7 @@
                                         <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
                                                 <input type="email" id="form3Example3c" name="username" class="form-control"
-                                                    placeholder="Email"/>
+                                                    placeholder="Email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}" required/>
                                             <label class="form-label" for="form3Example3c" th:text="#{label.login.email}"></label>
                                         </div>
                                     </div>
@@ -36,7 +36,7 @@
                                         <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
                                             <input type="password" id="form3Example4c" name="password" class="form-control"
-                                            placeholder="Password" />
+                                            placeholder="Password" pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[A-Z])[A-Za-z\d]{8,16}$" required/>
                                             <label class="form-label" for="form3Example4c" th:text="#{label.login.password}"></label>
                                         </div>
                                     </div>
